# test

./: .gitignore  README.md
api/: pyproject.toml
api/core/: settings.py  urls.py
api/interface/: account.py  auth.py
api/module/account/: apps.py  manager.py  models.py  serializers.py  views.py
api/module/todo/: apps.py  models.py  urls.py
api/module/web/: apps.py
docker/: .env  docker-compose.yml  exec
docker/config/: nginx.conf
docker/db/: ext.sql
docker/dockerfiles/: api  nginx  web
docker/ssl/: nginx.crt  nginx.key
web/: package-lock.json
web/src/: App.jsx
