[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["hoanglv92 <hoangtuathat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django-ninja = "^1.1.0"
psycopg = "^3.1.18"
psycopg2 = "^2.9.9"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.27.1"
PyJWT = "^2.8.0"
Django = "^5.0.2"
django-filter = "^23.5"
django-hint = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
